; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_ipc.c_mpv_node_map_add_double.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_ipc.c_mpv_node_map_add_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { double }

@MPV_FORMAT_DOUBLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.TYPE_7__*, i8*, double)* @mpv_node_map_add_double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpv_node_map_add_double(i8* %0, %struct.TYPE_7__* %1, i8* %2, double %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca double, align 8
  %9 = alloca %struct.TYPE_7__, align 8
  store i8* %0, i8** %5, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %6, align 8
  store i8* %2, i8** %7, align 8
  store double %3, double* %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load double, double* %8, align 8
  store double %12, double* %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 1
  %14 = load i32, i32* @MPV_FORMAT_DOUBLE, align 4
  store i32 %14, i32* %13, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @mpv_node_map_add(i8* %15, %struct.TYPE_7__* %16, i8* %17, %struct.TYPE_7__* %9)
  ret void
}

declare dso_local i32 @mpv_node_map_add(i8*, %struct.TYPE_7__*, i8*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
